# Final-Project-GPU-Accelerated-CNN-Inference

./: CMakeLists.txt  CPU-RUN.cpp  README.md  The structure.txt  cuconv_api.h
src/: cuconv_lib_Original.cu  cuconv_lib_fuse.cu  main.cpp
